SIM-feat-37a9.11: Added support for Fortifier in combat simulator. Also some bugfixes

--- a/design/templates/OpenGame/simulator.tpl.html
+++ b/design/templates/OpenGame/simulator.tpl.html
@@ -49,7 +49,7 @@ function sym_set_all(group, value)
       <!-- IF simulator.ID -->
         <th>{simulator.NAME}</th>
         <th>
-          <!-- IF simulator.GROUP != UNIT_DEFENCE -->
+          <!-- IF simulator.GROUP != UNIT_DEFENCE && simulator.GROUP != UNIT_GOVERNORS -->
             <span class="fl"><input type="button" class="button" tabindex=-1 value="0" onclick="sym_set({simulator.ID});"></span>
             <span class="fl">&nbsp;&nbsp;<input type='text' tabindex=1{simulator.NUM} group="attacker{simulator.ID}" id="attacker{simulator.ID}" name='attacker[{simulator.ID}]' value='{simulator.ATTACKER}'>&nbsp;&nbsp;</span>
             <span class="fr"><input type="button" class="button" tabindex=-1 value="{L_sys_max}" onclick="sym_set({simulator.ID}, 1);"></span>
