--- a/design/templates/OpenGame/universe.tpl.html
+++ b/design/templates/OpenGame/universe.tpl.html
@@ -299,7 +299,9 @@ uni_row[{galaxyrow.PLANET_NUM}] =
         <!-- IF ACT_FRIEND -->
         <a class="fl" href="buddy.php?request_user_id={galaxyrow.USER_ID}"><img src={dpath}img/b.gif alt="{L_gl_buddyreq}" title="{L_gl_buddyreq}" border=0></a>&nbsp;
         <!-- ENDIF -->
+        <!-- IF galaxyrow.USER_RANK != '-' -->
         <a class="fl" href="stat.php?who=1&range={galaxyrow.USER_RANK}#{galaxyrow.USER_RANK}"><img src="{D_SN_ROOT_VIRTUAL}design/images/statistics.png" alt="{L_gl_stats}" title="{L_gl_stats}: {L_Place} {galaxyrow.USER_RANK}/{userCount}" border=0 width="16px"></a>
+        <!-- ENDIF -->
       <!-- ELSE -->
         &nbsp;
       <!-- ENDIF -->
