--- a/design/templates/OpenGame/dark_matter.tpl.html
+++ b/design/templates/OpenGame/dark_matter.tpl.html
@@ -1,4 +1,7 @@
-<h1>{L_sys_dark_matter}</h1>
+<h2>{L_sys_dark_matter}</h2>
+
+<!-- INCLUDE _result_message -->
+
 <table width="519">
 
   <tr class="c_j">
@@ -45,7 +48,7 @@
     </tr>
     <tr class="c_j">
       <td>
-      <form method="POST">
+      <form action="{D_SN_ROOT_VIRTUAL}dark_matter.php" method="POST">
           {L_sys_dark_matter_purchase_text_cost} <span class="ok">{C_payment_lot_size} {L_sys_dark_matter_sh}</span>
           {L_sys_dark_matter_purchase_text_unit} <span class="notice">{C_payment_lot_price} {C_payment_currency_default}</span>.
           {L_sys_dark_matter_purchase_text_end}
