--- a/design/templates/OpenGame/dark_matter.tpl.html
+++ b/design/templates/OpenGame/dark_matter.tpl.html
@@ -49,8 +49,15 @@
     <tr class="c_j">
       <td>
           {L_sys_dark_matter_purchase_text_cost} <span class="ok">{PAYMENT_CURRENCY_EXCHANGE_DEFAULT} {L_sys_dark_matter_sh}</span>
-          {L_sys_dark_matter_purchase_text_unit} <span class="notice">1 {C_payment_currency_default}</span>.
+          {L_sys_dark_matter_purchase_text_unit} <span class="notice">1 {C_payment_currency_default}</span>
+          <!-- IF .discount -->
           {L_sys_dark_matter_purchase_text_end}
+          <ul>
+          <!-- BEGIN discount -->
+            <li>{discount.TEXT}</li>
+          <!-- END discount -->
+          </ul>
+          <!-- ENDIF -->
 
           <h3>{L_sys_dark_matter_purchase_step1}</h3>
 
