--- a/design/templates/OpenGame/message_body.tpl.html
+++ b/design/templates/OpenGame/message_body.tpl.html
@@ -2,4 +2,7 @@
 <table width="519">
   <tr><td class="c">{title}</td></tr>
   <tr><th class="errormessage">{mes}</th></tr>
+  <!-- IF DEST -->
+  <tr><td class="c link"><a href="{DEST}">{L_sys_continue}</a></td></tr>
+  <!-- ENDIF -->
 </table>
