INT-feat-37a12.0: To Empire Overview added ability to control production level of each and every building at Empire. Also turned on real production calculation on this page

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -291,6 +291,13 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
   height: 13px;
 }
 
+.empire_cell_wrapper_double_height
+{
+  position: relative;
+  width: 100%;
+  height: 32px;
+}
+
 .empire_cell_filler
 {
   position: absolute;
