--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -88,7 +88,7 @@
         <!-- ENDIF -->
 
         <tr>
-          <td class="c_c" width="120" rowspan="6">
+          <td class="c_c" width="120" rowspan="5">
             <!-- DEFINE $PLANET_ID = '{PLANET_ID}' -->
             <!-- INCLUDE planet_governor -->
           </td>
@@ -127,15 +127,19 @@
           </th>
         </tr>
         <tr>
-          <th colspan="2">{L_Diameter}&nbsp;{planet_diameter}&nbsp;{L_km}</th>
-          <th colspan="2">
-            <div class="icons icon-info" style="display: inline-block;" onclick="document.location='infos.php?gid={D_UNIT_PLANET_DENSITY}'"></div>
-            {L_density}&nbsp;{planet_density}&nbsp;{L_density_units}
-
-          </th>
+          <th colspan="4">{L_Diameter}&nbsp;{planet_diameter}&nbsp;{L_km}</th>
         </tr>
         <tr>
-          <th colspan="4">{L_Temperature}&nbsp;({L_min_avg_max})&nbsp;{planet_temp_min}&deg;C&nbsp;/&nbsp;{planet_temp_avg}&deg;C&nbsp;/&nbsp;{planet_temp_max}&deg;C</th>
+          <th colspan="4">{L_Temperature}&nbsp;({L_min_avg_max}):&nbsp;{planet_temp_min}&deg;C&nbsp;/&nbsp;{planet_temp_avg}&deg;C&nbsp;/&nbsp;{planet_temp_max}&deg;C</th>
+        </tr>
+        <tr>
+          <th colspan="2">
+            {L_sys_planet_density_core}: {planet_density_text}
+            <div class="icons icon-info link" style="display: inline-block; vertical-align: middle;" onclick="document.location='infos.php?gid={D_UNIT_PLANET_DENSITY}'"></div>
+          </th>
+          <th colspan="2">
+            {L_sys_planet_density}:&nbsp;{planet_density}&nbsp;{L_sys_planet_density_units}
+          </th>
         </tr>
 
         </tr>
