PAY-feat-37a13.6: Added exchange rates to payment page. Also almost any info block can be hidden/unhidden

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -526,3 +526,17 @@ th.c_j, td.c_j
   background-color: black;
   border: 0;
 }
+
+.link
+{
+  text-decoration: underline;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.link_action
+{
+  border-bottom: 1px dashed;
+  font-weight: bold;
+  cursor: pointer;
+}
