--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -219,13 +219,20 @@
       </tr>
       <!-- IF ! USER_VACATION_DISABLE -->
         <tr title="{L_vacations_tip}">
-          <th colspan=2><span class="fl"><input name="vacation"{opt_modev_data} type="checkbox" id="vacation" /> <label for="vacation">{L_mode_vacations} {L_opt_vacation_min} <span id="vacancy_to"></span></label></span></th>
+          <th colspan=2>
+          <!-- IF VACATION_NEXT > TIME_NOW && ! USER_AUTHLEVEL-->
+          {L_opt_vacation_err_timeout}<br />
+          {L_opt_vacation_next} {VACATION_NEXT_TEXT}
+          <!-- ELSE -->
+          <span class="fl"><input id="vacation" name="vacation" type="checkbox" {opt_modev_data} /> <label for="vacation">{L_mode_vacations} {L_opt_vacation_min} <span id="vacancy_to"></span></label></span>
+          <!-- ENDIF -->
+          </th>
         </tr>
       <!-- ENDIF -->
       <tr>
         <td class="c_l" colspan="2">
-          <input name="deltime"{opt_delac_data} type="checkbox" id="deltime" /> <label for="deltime">{L_deleteaccount}. {L_deleteaccount_tip}</label>
-          <span id="delete_on"></span>
+          <input name="deltime" type="checkbox" id="deltime" {opt_delac_data} /> <label for="deltime">{L_deleteaccount}. {L_deleteaccount_tip}</label><br />
+          {L_deleteaccount_on} <span id="delete_on"></span>
         </td>
       </tr>
       <tr>
@@ -235,6 +242,7 @@
   </table>
 </form>
 <script type="text/javascript"><!--
+// sn_timers.unshift({id: 'vacation_next', type: 0, active: true, start_time: '{TIME_NOW}', options: {format: 773, delta: '{VACATION_TIMEOUT}'}});
   sn_timers.unshift({id: 'vacancy_to', type: 4, active: true, start_time: '{TIME_NOW}', options: {format: 3, delta: '{C_player_vacation_time}'}});
   sn_timers.unshift({id: 'delete_on', type: 4, active: true, start_time: '{TIME_NOW}', options: {format: 3, delta: '{C_player_delete_time}'}});
 // --></script>
