--- a/design/templates/OpenGame/admin/settings.tpl.html
+++ b/design/templates/OpenGame/admin/settings.tpl.html
@@ -196,8 +196,8 @@
       <th><input name="url_forum" size="53" maxlength="254" value="{C_url_forum}" type="text"></th>
     </tr>
     <tr>
-      <th>{L_adm_opt_game_dark_matter}<br></th>
-      <th><input name="url_dark_matter" size="53" maxlength="254" value="{C_url_dark_matter}" type="text"></th>
+      <th>{L_adm_opt_game_metamatter}<br></th>
+      <th><input name="url_purchase_metamatter" size="53" maxlength="254" value="{C_url_purchase_metamatter}" type="text"></th>
     </tr>
 
     <tr><td class="c" colspan="2">{L_adm_opt_game_defaults}</td></tr>
