--- a/design/templates/OpenGame/dark_matter.tpl.html
+++ b/design/templates/OpenGame/dark_matter.tpl.html
@@ -3,6 +3,9 @@
 <!-- INCLUDE _result_message -->
 
 <script type="text/javascript">
+  var LA_sys_show = "{LA_sys_show}";
+  var LA_sys_hide = "{LA_sys_hide}";
+/*
   function sn_show_hide(element, element_name)
   {
     var element_to_hide = jQuery("#" + element_name);
@@ -11,6 +14,7 @@
     element_to_hide.css('display', element_to_hide.css('display') == 'none' ? (tag_name == 'TR' ? 'table-row' : (tag_name == 'UL' || tag_name == 'DIV' ? 'block' : 'inline')) : 'none');
     jQuery(element).html("[&nbsp;" + (element_to_hide.css('display') == 'none' ? "{LA_sys_show}" : "{LA_sys_hide}") + "&nbsp;]");
   }
+*/
 </script>
 
 <table width="519">
@@ -28,6 +32,21 @@
     </td>
   </tr>
 
+  <tr class="c_j">
+    <th>
+      {L_sys_dark_matter_obtain_header}
+      <span class="fr link_action" onclick="sn_show_hide(this, 'dark_matter_obtain');">[ {L_sys_hide} ]</span>
+    </th>
+  </tr>
+  <tr class="c_j" id="dark_matter_obtain">
+    <td>
+      {L_sys_dark_matter_obtain_text}
+      <!-- IF PAYMENT_AVAILABLE -->
+      {L_sys_dark_matter_obtain_text_convert}
+      <!-- ENDIF -->
+    </td>
+  </tr>
+
   <tr>
     <th class="c_l">
       {L_sys_dark_matter_description_header}
@@ -37,171 +56,6 @@
   <tr class="c_j" id="dark_matter_usage" style="display: none;">
     <td>
       {L_sys_dark_matter_description_text}
-     </td>
-  </tr>
-
-  <tr class="c_j">
-    <th>
-      {L_sys_dark_matter_obtain_header}
-      <span class="fr link_action" onclick="sn_show_hide(this, 'dark_matter_obtain');">[ {L_sys_show} ]</span>
-    </th>
-  </tr>
-  <tr class="c_j" id="dark_matter_obtain" style="display: none;">
-    <td>
-      {L_sys_dark_matter_obtain_text}
-
-      <!-- IF URL_DARK_MATTER --><br /><br />{L_sys_dark_matter_purchase_url_description} <a href="{URL_DARK_MATTER}"><span class="link">{L_sys_dark_matter_purchase_url_get}</span></a>.<!-- ENDIF -->
     </td>
   </tr>
-
-  <!-- IF .payment_module -->
-    <tr class="c_j">
-      <th>
-        {L_sys_dark_matter_purchase}
-      </th>
-    </tr>
-    <tr class="c_j">
-      <td>
-          {L_sys_dark_matter_purchase_text_cost} <span class="ok">{PAYMENT_CURRENCY_EXCHANGE_DEFAULT} {L_sys_dark_matter_sh}</span>
-          {L_sys_dark_matter_purchase_text_unit} <span class="notice">1 {C_payment_currency_default} ({PAYMENT_CURRENCY_DEFAULT_TEXT})</span><br /><br />
-          <!-- IF .exchange -->
-            {L_sys_dark_matter_purchase_exchange}
-            <span class="fr link_action" onclick="sn_show_hide(this, 'dark_matter_exchange');">[ {L_sys_show} ]</span><br />
-            <div id="dark_matter_exchange" style="display: none;">
-              <table width="100%">
-                <tr>
-                  <th>{L_sys_currency_name}</th>
-                  <th>{L_sys_currency_symbol}</th>
-                  <th>{L_sys_currency_exchange_direct}</th>
-                  <th>{L_sys_currency_exchange_reverse}</th>
-                  <th>{L_sys_currency_exchange_dm}</th>
-                </tr>
-                <!-- BEGIN exchange -->
-                <tr>
-                  <td>{exchange.TEXT}</td>
-                  <td>{exchange.SYMBOL}</td>
-                  <td class="c_r">{exchange.COURSE_DIRECT}</td>
-                  <td class="c_r">{exchange.COURSE_REVERSE}</td>
-                  <td class="c_r">{exchange.DM_PER_UNIT}</td>
-                  <!--<td class="c_r">{exchange.UNIT_PER_LOT}</td>-->
-                </tr>
-                <!-- END exchange -->
-              </table>
-              <span class="note">{L_sys_dark_matter_purchase_exchange_note}
-            </div>
-            <br />
-          <!-- ENDIF -->
-
-          <!-- IF .discount -->
-          {L_sys_dark_matter_purchase_text_end}
-          <span class="fr link_action" onclick="sn_show_hide(this, 'dark_matter_bonus_rate');">[ {L_sys_show} ]</span>
-          <ul id="dark_matter_bonus_rate" style="display: none;">
-          <!-- BEGIN discount -->
-            <li>{discount.TEXT}</li>
-          <!-- END discount -->
-          </ul>
-          <!-- ENDIF -->
-
-          <h3>{L_sys_dark_matter_purchase_step1}</h3>
-
-          <!-- IF ! PAY_LINK -->
-            <form action="{D_SN_ROOT_VIRTUAL}dark_matter.php" method="POST">
-          <!-- ELSEIF PAY_LINK_METHOD == 'GET' || PAY_LINK_METHOD == 'POST' -->
-            <form action="{PAY_LINK}" method="{PAY_LINK_METHOD}">
-          <!-- ENDIF -->
-
-          <!-- IF ! DARK_MATTER -->
-            <span class="notice">{L_sys_dark_matter_purchase_step1_text}</span><br /><br/>
-            {L_sys_dark_matter_purchase_amount}
-            <select name="dark_matter">
-              <!-- BEGIN dm_amount -->
-                <option value="{dm_amount.VALUE}"<!-- IF dm_amount.VALUE == DARK_MATTER --> selected<!-- ENDIF -->>{dm_amount.VALUE}</value>
-              <!-- END dm_amount -->
-            </select>
-          <!-- ELSE -->
-            <input type="hidden" name="dark_matter" id="dark_matter_amount" value="{DARK_MATTER}">
-            {L_sys_dark_matter_purchase_amount} <span class="ok">{DARK_MATTER}</span><br /><br />
-
-            <!-- IF ! PAYMENT_MODULE -->
-              {L_sys_dark_matter_purchase_select}
-              <select name="payment_module">
-                <!-- BEGIN payment_module -->
-                <option value="{payment_module.ID}">{payment_module.NAME}</option>
-                <!-- END payment_module -->
-              </select>
-            <!-- ELSE -->
-              <input type="hidden" name="payment_module" id="dark_matter_module" value="{PAYMENT_MODULE}">
-              {L_sys_dark_matter_purchase_payment_selected} <span class="ok">"{PAYMENT_MODULE_NAME}"</span><br /><br />
-
-              <!-- BEGIN pay_link_data -->
-                <input type="hidden" name="{pay_link_data.FIELD}" value="{pay_link_data.VALUE}">
-              <!-- END pay_link_data -->
-
-                  <!-- BEGIN render -->
-                    <!-- IF render.TYPE == 'select' -->
-                      <select name="{render.NAME}">
-                        <!-- BEGIN value -->
-                          <option value="{render.value.FIELD}">{render.value.VALUE}</option>
-                        <!-- END value -->
-                      </select>
-                    <!-- ELSE -->
-                      {render.VALUE}
-                    <!-- ENDIF -->
-                  <!-- END render -->
-                <!-- IF ! PAY_LINK -->
-
-                <!-- ELSE -->
-                  <h3>{L_sys_dark_matter_purchase_step2}</h3>{C_adv_conversion_code_payment}
-                  <span class="notice">{L_sys_dark_matter_purchase_step2_text}</span>
-
-                  <!-- IF PAY_LINK_METHOD == 'LINK' -->
-                    <script type="text/javascript">
-                      function make_payment_popup()
-                      {
-                        this.open = function(ob)
-                        {
-                          $(ob).hide();
-                          $('<span id="psload" class="fl">{LA_sys_dark_matter_purchase_in_progress}</span>').insertAfter(ob);
-                          var win = window.open('{PAY_LINK}', 'PayStation', 'width=850px, height=550px, scrollbars=yes, status=no');
-                          setTimeout(function ()
-                          {
-                            if(win.closed)
-                            {
-                              $('#psload').remove();
-                              $(ob).show();
-                            }
-                            else
-                            {
-                              setTimeout(arguments.callee,500);
-                            }
-                          }, 500);
-                        }
-                      }
-                      payment_popup = new make_payment_popup;
-                    </script>
-
-              <br /><br />
-                    <input class="fl" type="button" value="{L_sys_dark_matter_purchase_pay}" onclick="payment_popup.open(this);return false;">
-                  <!-- ENDIF -->
-                <!-- ENDIF -->
-              <!-- ENDIF -->
-          <!-- ENDIF -->
-
-
-          <!-- IF ! PAY_LINK -->
-              <br /><br />
-              <input class="fl" type="submit" value="{L_sys_dark_matter_purchase_confirm}">
-          <!-- ELSEIF PAY_LINK_METHOD == 'GET' || PAY_LINK_METHOD == 'POST' -->
-              <br /><br />
-              <input class="fl" type="submit" value="{L_sys_dark_matter_purchase_pay}">
-          <!-- ENDIF -->
-                  <!-- IF PAY_LINK_METHOD != 'LINK' -->
-        </form>
-          <!-- ENDIF -->
-            <form action="{D_SN_ROOT_VIRTUAL}dark_matter.php" method="POST">
-                  <input class="fr" type="submit" value="{L_sys_dark_matter_purchase_reset}" onclick="jQuery('#dark_matter_amount').val('');jQuery('#dark_matter_module').val('');">
-        </form>
-      </td>
-    </tr>
-  <!-- ENDIF -->
 </table>
