ADM-feat-38a2.2: Added MM adjust page to admin interface. Also fixed error with no MM on payment

--- a/design/templates/OpenGame/admin/menu.tpl.html
+++ b/design/templates/OpenGame/admin/menu.tpl.html
@@ -15,6 +15,9 @@
     <!-- IF USER_AUTHLEVEL >= 3 -->
     <tr><td><a href="admin/settings.php">{L_adm_conf}</a></td></tr>
     <tr><td><a href="admin/admin_darkmatter.php">{L_dark_matter}</a></td></tr>
+    <!-- IF PAYMENT -->
+    <tr><td><a href="admin/adm_metamatter.php">{L_sys_metamatter}</a></td></tr>
+    <!-- ENDIF -->
     <!-- ENDIF -->
     <tr><td><a href="admin/adm_quest.php">{L_qst_quests}</a></td></tr>
 
